cluster/download/radarr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: download
  labels:
    app: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      automountServiceAccountToken: false
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 7878
          livenessProbe:
            httpGet:
              path: /ping
              port: 7878
          resources:
            requests:
              cpu: 100m
              memory: 128M
            limits:
              cpu: 4
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: download
              mountPath: /download
            - name: media
              mountPath: /media
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: config-seed
          secret:
            secretName: radarr-config
            items:
              - key: config.xml
                path: config.xml
        - name: download
          persistentVolumeClaim:
            claimName: radarr-download
        - name: media
          persistentVolumeClaim:
            claimName: radarr-media
